2009-04-11  Hans Breuer  <hans@breuer.org>

	* app/app_procs.c :  patch from Arunan Balasubramaniam, bug #573921 to
	to reduce wakeups prefer g_timeout_add_seconds() over g_timeout_add()

	* app/modify_tool.c(modify_button_press) : don't got to single handle 
	movement if there is more than one object selected, bug #525011
	* app/handle_ops.c : consider the selection state in choosing the
	handle color, to give some feedback on the handles behavior change

2009-04-06  Hans Breuer  <hans@breuer.org>

	* app/display.c : something called ddisplay_flush() while we were
	already in ddisplay_destroy() - moved removing the idle handler to
	ddisplay_really_destroy(), the last possible moment - bug #578173

2009-04-05  Hans Breuer  <hans@breuer.org>

	* objects/AADL/aadlbox.c : one const too much, build error with gcc

	* plug-ins/python/wdeps.py : intended tinting on win32, too.
	* plug-ins/python/dot2dia.py : don't let a single unknown color make
	the whole import fail

	* objects/AADL/aadlbox.c(aadlbox_destroy) : free ports after calling
	element_destroy(), which needs valid handles, should fix bug #575224
	Replaced some leaking, superfluous heap allocations with stack allocs.

	* lib/diarenderer.c(get_text_width) : complain if the derived renderer
	does not implment the method and does not maintian DiaRenderer::font.
	* plug-ins/cairo/diacairo-renderer.c : actually maintain the font field
	to make text cursor position calculation work, part of bug #576548

	* app/display.c : make the tab use the short name again and adjust the
	(integrated UI) application title HIC compliant, fixing bug #527288

	* objects/network/basestation.c : don't move non-movable handles,
	fixing bug #574637

	* objects/UML/association.c : force an internal state update after 
	changing properties, fixes bug #576843

	* lib/persistence.c : instead of trying to manage the open state of our
	windows 'by hand' just use GTK_WIDGET_MAPPED(window), fixes bug #574388
